--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Birthday Counter</h1>
         </nav>
     </header>
-    <h1 id="title">Time left till your Birthday</h1>
+    <h1 id="title">Time left till My Birthday 😍</h1>
     <h1 id="time-left"></h1>
     <script src="app.js"></script>
 </body>
